--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -9,5 +9,6 @@ dependencies {
     implementation "org.glassfish:jakarta.el:4.0.2"
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+    implementation 'com.github.bancolombia:aws-secrets-manager-async:4.4.34'
     testImplementation "org.springframework.security:spring-security-test"
 }
