--- a/applications/app-service/src/main/resources/application.yaml
+++ b/applications/app-service/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8083
+  port: ${PORT:8080}
 spring:
   application:
     name: "reports"
@@ -11,9 +11,9 @@ spring:
     include: null
 
 aws:
-  region: "us-east-1"
+  region: "${AWS_REGION:us-east-1}"
   secrets:
-    jwt-key-pair: "jwt/rsa/keys"
+    jwt-key-pair: "${AWS_RSA_KEYS_SECRET}"
 management:
   endpoints:
     web:
